# axum_htmx_example

./: .env.example  Cargo.toml  README.md  docker-compose.yaml
app/: Cargo.toml  README.md
app/examples/: inspect_cache.rs
app/src/: embedded_assets.rs  error.rs  lib.rs  state.rs
app/src/config/: app_config.rs  db.rs  logging.rs  mod.rs  redis.rs  ui.rs
app/src/dto/: mod.rs  request.rs
app/src/handlers/: admin_templates.rs  auth_recovery.rs  auth_templates.rs  common_handler.rs  error_handler.rs  mod.rs  response.rs
app/src/middleware/: auth.rs  csrf.rs  logging.rs  mod.rs  rate_limit_response.rs  rate_limits.rs
app/src/models/: view.rs
app/src/repository/: audit_query.rs  mod.rs  mutation.rs  query.rs
app/src/routes/: admin.rs  mod.rs  public.rs
app/src/service/: audit_service.rs  login_service.rs  mod.rs  notification_service.rs  post_service.rs  rbac_service.rs  session_service.rs  user_service.rs
app/src/utils/: guard_macros.rs  mod.rs  pagination.rs  password.rs  security.rs
app/static/: style.css
app/templates/: base.html
app/templates/admin/: audit_logs.html  audit_logs_partial.html  base.html  dashboard.html  dashboard_content.html  dashboard_sidebar.html  login.html  notification_bell.html  notifications_partial.html  post_edit_form.html  post_form.html  posts.html  posts_content.html  profile.html  profile_content.html  profile_sessions_partial.html  rbac_partial.html  (+9 more)
app/tests/: audit_tests.rs  auth_tests.rs  common.rs  crud_post_tests.rs  csrf_tests.rs  dashboard_tests.rs  login_lockout_tests.rs  notification_tests.rs  password_recovery_tests.rs  post_service_test.rs  profile_tests.rs  rate_limit_tests.rs  rbac_tests.rs  redis_cache_tests.rs  user_service_test.rs  user_tests.rs  users_tests.rs
entity/: Cargo.toml  README.md
entity/src/: actions.rs  audit_logs.rs  lib.rs  login_attempts.rs  notifications.rs  password_resets.rs  permission_actions.rs  permissions.rs  post.rs  prelude.rs  resources.rs  role_permissions.rs  roles.rs  sessions.rs  user_roles.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220120_000001_create_post_table.rs  m20220120_000002_seed_posts.rs  m20251221_000001_create_user_table.rs  m20251221_000002_create_rbac_tables.rs  m20251221_000003_seed_rbac.rs  m20251222_000001_create_audit_logs.rs  m20251225_000001_create_sessions.rs  m20251225_000002_create_password_resets.rs  m20251230_000001_create_login_attempts.rs  m20251230_000002_create_notifications.rs
(+23 files in other folders)
