[package]
edition = "2024"
name = "entity"
publish = false
rust-version = "1.92.0"
version = "0.1.0"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sea-orm]
version = "~2.0.0-rc.20"
features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"]
