[package]
edition = "2024"
name = "migration"
publish = false
rust-version = "1.92.0"
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
entity = { path = "../entity" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
chrono = "0.4"

[dependencies.sea-orm-migration]
features = ["runtime-tokio-native-tls", "sqlx-postgres"]
version = "~2.0.0-rc.20"
